<resources>
    <string name="app_name">Interview-Spot</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="facebook_app_id">383156301755744</string>
    <string name="login_get_interview_first">
        Get InterView First.
    </string>
    <string name="login_the_only_spot...">
        The only spot that lets you get interviewed for job opportunities from the comfort of your home
    </string>
    <string name="login_login_with_facebook">
        Log in with Facebook
    </string>
    <string name="login_login_with_google_plus">
        Sign in with Google
    </string>
    <string name="login_login_with_linked_in">
        Sign in with Linkedin
    </string>

    <string name="home_tab_explore">
        Explore
    </string>
    <string name="home_tab_jobs_near_by">
        Jobs Nearby
    </string>
    <string name="home_tab_my_jobs">
        My Jobs
    </string>
    <string name="home_tab_job_info">
        Job Info
    </string>
    <string name="home_tab_company_info">
        Company Info
    </string>
    <string name="home_tab_contacts">
        Contacts
    </string>
    <string name="home_menu_apply">
        Apply
    </string>
    <string name="home_menu_reject">
        Reject
    </string>
    <string name="home_menu_short_list">
        Shortlist
    </string>
    <string name="home_menu_share">
        Share
    </string>

    <string name="recording_action_bar_title">
        Video Interview Recording
    </string>
    <string name="recording_job">
        DD philipines, Data analyst
    </string>
    <string name="recording_hint">
        Tell us about project that you have recently managed. Share with us if you thought that the project was a sucess or failure why
    </string>
    <string name="recording_hold_to_record">
        Hold To Record
    </string>
    <string name="recording_switch_camera">
        Switch camera
    </string>

    <string name="preview_action_bar_re_record">
        Re-Record
    </string>
    <string name="preview_action_bar_cancel">
        Cancel
    </string>
    <string name="preview_title">
        Preview Recording
    </string>
    <string name="preview_company">
        Company:
    </string>
    <string name="preview_role">
        Role:
    </string>
    <string name="preview_submit_introduction">
        Sumit Introduction
    </string>

    <string name="video_manager_action_bar_title">
        Introduction Videos
    </string>
    <string name="video_manager_no_videos_found">
        No videos found
    </string>
</resources>
