<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_shape_login"
            android:gravity="center"
            android:src="@drawable/circle_icon_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INTERVIEW-"
                android:textColor="#C1253D"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SPOT"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=".com"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_get_interview_first"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_the_only_spot..." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_connecting_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connecting..." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_login_facebook_selector"
            android:drawableLeft="@drawable/btn_login_facebook"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="0dip"
            android:text="@string/login_login_with_facebook"
            android:textColor="#ffffff"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_login_google_plus_selector"
            android:drawableLeft="@drawable/btn_login_google_plus"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/login_login_with_google_plus"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_linkedin_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_login_linkedin_selector"
            android:drawableLeft="@drawable/btn_login_in"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/login_login_with_linked_in"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>