<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#434343"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:id="@+id/ln_header_recording"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_company_video_interview_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/recording_job"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tv_hint_video_interview_recording"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/recording_hint" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <com.sunrise.interview.interviewspot.util.SquareLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="2dp">

                <LinearLayout
                    android:id="@+id/ln_body_recording"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" />

                <ImageButton
                    android:id="@+id/btn_replay_video_interview_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="#00ffffff"
                    android:src="@drawable/ic_menu_replay"/>
            </RelativeLayout>
        </com.sunrise.interview.interviewspot.util.SquareLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ln_footer_recording"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar_video_interview_recording"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:progressDrawable="@drawable/progressbar_video_interview_recording" />

            <TextView
                android:id="@+id/tv_time_video_interview_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="00:30 /1:00"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_recording"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/button_recording_selector"
                android:gravity="center"
                android:src="@drawable/ic_menu_record" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/recording_hold_to_record"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_change_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingRight="10dp">

            <ImageButton
                android:id="@+id/btn_change_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_switch_camera_selector"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recording_switch_camera"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>