<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#434343"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:id="@+id/ln_header_preview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/preview_title"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <com.sunrise.interview.interviewspot.util.SquareLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="2dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <VideoView
                        android:id="@+id/ln_body_preview"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center" />

                    <ImageButton
                        android:background="#00ffffff"
                        android:id="@+id/btn_replay_video_interview_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_menu_replay" />
                </RelativeLayout>
                >
            </LinearLayout>
        </com.sunrise.interview.interviewspot.util.SquareLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ln_footer_preview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar_video_interview_preview"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:progressDrawable="@drawable/progressbar_video_interview_preview" />

            <TextView
                android:id="@+id/tv_time_video_interview_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="00:30 /1:00"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="@string/preview_company"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_company_video_interview_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="DDB Philipines"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/preview_role"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_role_video_interview_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="Data Analyst"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit_video_interview_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_submit_selector"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/preview_submit_introduction"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>