<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ln_img_explore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/img_explore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/bg" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:background="#88655e5e"
                android:padding="5dp">

                <LinearLayout
                    android:id="@+id/ln_company_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_company_explore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DDB Philippines"
                        android:textColor="#ffffff"
                        android:textSize="15dip"
                        android:textStyle="bold"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/tv_km__explore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="(35km from you)"
                        android:textColor="#ffffff"
                        android:textSize="10dip" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ln_salary_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/ln_company_explore"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_role_explore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Data Analyst"
                        android:textColor="#ffffff"
                        android:textSize="12dip"
                        android:typeface="sans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/tv_role_explore"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="|"
                        android:textColor="#ffffff"
                        android:textSize="12dip"
                        android:typeface="sans" />

                    <TextView
                        android:id="@+id/tv_address_explore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/tv_role_explore"

                        android:text="Philippines, Taguig City"
                        android:textColor="#ffffff"
                        android:textSize="12dip"
                        android:typeface="sans" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_salary_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/ln_salary_explore"
                    android:text="$10,000 PHP - 12,000 PHP"
                    android:textColor="#ffffff"
                    android:textSize="12dip" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ln_tab_explore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/ln_img_explore"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <TabHost
                android:id="@android:id/tabhost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffffff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:orientation="horizontal" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"></View>

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="0" />

                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewpager_explore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom" />

                </LinearLayout>
            </TabHost>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_footer_explore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#66000000"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cmd_1_footer_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/footer_selector_home"
            android:drawableTop="@drawable/ic_menu_apply"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/home_menu_apply"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/cmd_2_footer_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/footer_selector_home"
            android:drawableTop="@drawable/ic_menu_reject"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/home_menu_reject"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/cmd_3_footer_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/footer_selector_home"
            android:drawableTop="@drawable/ic_menu_shortlist"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/home_menu_short_list"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/cmd_4_footer_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/footer_selector_home"
            android:drawableTop="@drawable/ic_menu_share"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/home_menu_share"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </LinearLayout>
</RelativeLayout>